[tool.poetry]
name = "hw1-dlsystem"
version = "0.1.0"
description = ""
authors = ["ddmitriev <danildmitrievv11@gmail.com>"]
readme = "README.md"
packages = [{include = "hw1_dlsystem"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

