[tool.poetry]
name = "hw1-dlsystem"
version = "0.1.0"
description = ""
authors = ["ddmitriev <danildmitrievv11@gmail.com>"]
readme = "README.md"
packages = [{include = "hw1_dlsystem"}]


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
torch = "1.9.0"
torchvision = "0.10.0"
torchaudio = "0.9.0"
numpy = "1.17.5"
pytorch-lightning = "1.6.5"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

